tests/invalid/aug_assign_undefined_var/main.py
def run_case() -> None:
    x += 1

if __name__ == "__main__":
    run_case()
